--- a/.github/workflows/readme-scribe.yml
+++ b/.github/workflows/readme-scribe.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: 'actions-go/go-install@main'
         id: install
         with:
-          module: "github.com/lazylllama/markscribe@HEAD"
+          module: "github.com/lazylllama/markscribe@master"
 
       - name: generate readme
         env:
